--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -42,7 +42,7 @@ jobs:
           push: false
           load: true # Export to Docker Engine rather than pushing to a registry
           tags: ${{ github.run_id }}
-          target: results/tests
+          target: result/tests
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
