--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -22,6 +22,9 @@ jobs:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
+
+      - name: Checkout
+        uses: actions/checkout@v4
       
       # setting up building on multiple platforms
       - name: Set up QEMU
