--- a/.github/workflows/call-docker-build-result.yaml
+++ b/.github/workflows/call-docker-build-result.yaml
@@ -46,7 +46,7 @@ jobs:
           load: true # Export to Docker Engine rather than pushing to a registry
           tags: ${{ github.run_id }}
           target: test
-          context: ./results/tests/
+          context: ./result/tests/
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
